Added SBT 1.0 support